--- a/CITB517 Client-server technologies/Project/MyPersonal.App/Views/Shared/_LoginPartial.cshtml
+++ b/CITB517 Client-server technologies/Project/MyPersonal.App/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     <form asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home")" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item active">
-                <a class="nav-link" asp-controller="Home" asp-action="Index">Hello, @UserManager.GetUserName(User)!</a>
+                <a class="nav-link" asp-controller="Comments" asp-action="Left">Hello, @UserManager.GetUserName(User)!</a>
             </li>
             <li class="nav-item active">
                 <button type="submit" class="btn btn-link navbar-btn nav-link text-light">Logout</button>
